# cedicaa

code/admin/: pyproject.toml  readme.md
code/admin/src/core/: data_analysis.py  database.py  oauth_client.py  seeds.py
code/admin/src/core/auth/: __init__.py  captcha_config.py  user.py  utils.py
code/admin/src/core/collection_record/: __init__.py  collection_record.py  utils.py
code/admin/src/core/employees/: __init__.py  employee_cedica.py  utils.py
code/admin/src/core/equestrian/: __init__.py  horse.py  utils.py
code/admin/src/core/jinete_amazonas/: __init__.py  jinete_amazonas.py  utils.py
code/admin/src/core/messages/: Message_model.py  __init__.py  utils.py
code/admin/src/core/payment_record/: __init__.py  payment_record.py  utils.py
code/admin/src/core/publications/: __init__.py  publication.py  utils.py
code/admin/src/web/: commands.py  config.py  helpers.py  jinja_def.py  routes.py  storage.py
code/admin/src/web/api/: articles.py  messages.py
code/admin/src/web/controllers/: auth.py  collection_record.py  data_analysis.py  employee_cedica.py  horses.py  messages.py  payment_record.py  publications.py  users.py
code/admin/src/web/handlers/: auth.py  error.py  files.py  json.py
code/admin/src/web/schemas/: article.py  message.py
code/admin/src/web/templates/: base.html  delete_modal.html  error.html  home.html
code/admin/static/: error.css  flash.css
code/admin/static/css/: custom.css
code/admin/static/js/: delete.js  messages.js  user.js
code/admin/tests/: __init__.py
code/admin/tests/controllers/: test_home.py
(+82 files in other folders)
