[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["Javier Ballesteros <javierballesterosd@gmail.com>", "Martina Mendizábal <marti.mendi89@gmail.com>", "Juan Ignacio Glassman <juanignacioglassman@gmail.com>", "Teo Ignacio Barrena <teobarrena@gmail.com>"]
readme = "README.md"
packages = [{include = "web", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
psycopg2-binary = "^2.9.9"
flask-sqlalchemy = "^3.1.1"
ipython = "^8.27.0"
flask-session = "^0.8.0"
flask-bcrypt = "^1.0.1"
minio = "^7.2.9"
pandas = "^2.2.3"
plotly = "^5.24.1"
authlib = "^1.3.2"
requests = "^2.32.3"
marshmallow = "^3.23.1"
flask-cors = "^5.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
